[package]
name = "rust-wasm-prelude"
version = "0.3.0"
authors = ["Jason Nall <jsonnull@gmail.com>"]
license = "MIT"
description = "A Rust and JavaScript utility suite for writing WebAssembly modules."
repository = "https://github.com/jsonnull/rust-wasm"
keywords = ["wasm", "javascript"]
categories = ["web-programming"]

[lib]
name = "rust_wasm_prelude"

[dependencies]
memalloc = "0.1.0"
clippy = { optional = true, version = "=0.0.174" }

[features]
lint = ["clippy"]
